RESOLVED FIXED276979
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-spacearound-negative.html
https://bugs.webkit.org/show_bug.cgi?id=276979
Summary [Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycon...
alan
Reported 2024-07-23 17:13:53 PDT
ssia
Attachments
Patch (2.73 KB, patch)
2024-07-23 17:15 PDT, alan
ews-feeder: commit-queue-
Patch (6.30 KB, patch)
2024-07-23 20:16 PDT, alan
no flags
[fast-cq]Patch (6.37 KB, patch)
2024-07-24 09:47 PDT, alan
no flags
alan
Comment 1 2024-07-23 17:15:34 PDT
alan
Comment 2 2024-07-23 20:16:10 PDT
alan
Comment 3 2024-07-24 09:47:18 PDT
Created attachment 471954 [details] [fast-cq]Patch
EWS
Comment 4 2024-07-24 11:12:14 PDT
Committed 281305@main (860b874f6e2f): <https://commits.webkit.org/281305@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471954 [details].
Radar WebKit Bug Importer
Comment 5 2024-07-24 11:13:15 PDT
Note You need to log in before you can comment on or make changes to this bug.