[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-spacearound-negative.html https://bugs.webkit.org/show_bug.cgi?id=276979

Reviewed by Simon Fraser.

Update fallback alignment to match most recent spec.
(see https://drafts.csswg.org/css-align-3/#distribution-values)

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderFlexibleBox.cpp: in case of overflow use 'safe' and not "center"
(WebCore::initialJustifyContentOffset): 0 means no inflow flex item. "normal" alignment applies (center).
RenderFlexibleBox::staticMainAxisPositionForPositionedFlexItem: pass in 0 as there's no inflow flex item.

Canonical link: https://commits.webkit.org/281305@main